--- a/app/src/main/res/layout/mahjong_human_player.xml
+++ b/app/src/main/res/layout/mahjong_human_player.xml
@@ -895,7 +895,7 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:id="@+id/Discard1Tile135"
+                            android:id="@+id/Discard1Tile35"
                             android:background="@drawable/mahjongtiledots4"
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
@@ -904,7 +904,7 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:id="@+id/Discard1Tile136"
+                            android:id="@+id/Discard1Tile36"
                             android:background="@drawable/mahjongtiledots4"
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
@@ -1394,7 +1394,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:id="@+id/Discard1Tile85"
-                            android:background="@drawable/mahjongtiledots4"
+                            android:background=""
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
 
@@ -1403,7 +1403,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:id="@+id/Discard1Tile86"
-                            android:background="@drawable/mahjongtiledots4"
+                            android:background=""
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
 
@@ -1412,7 +1412,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:id="@+id/Discard1Tile87"
-                            android:background="@drawable/mahjongtiledots4"
+                            android:background=""
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
 
@@ -1421,7 +1421,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:id="@+id/Discard1Tile88"
-                            android:background="@drawable/mahjongtiledots4"
+                            android:background=""
                             android:layout_marginLeft="4dp"
                             android:layout_marginRight="4dp" />
                     </LinearLayout>
