--- a/app/src/main/res/layout/mahjong_human_player.xml
+++ b/app/src/main/res/layout/mahjong_human_player.xml
@@ -160,7 +160,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="[Player2 Name]: 10 Points"
-            android:id="@+id/Player2Name"
+            android:id="@+id/InfoDisplay"
             android:layout_weight="1"
             android:layout_gravity="left"
             android:textSize="16sp"/>
@@ -1613,7 +1613,8 @@
                     android:id="@+id/DisplayTextBox"
                     android:layout_weight="1"
                     android:textSize="32dp"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:gravity="center" />
             </LinearLayout>
         </LinearLayout>
 
