--- a/app/src/main/res/layout/mahjong_human_player.xml
+++ b/app/src/main/res/layout/mahjong_human_player.xml
@@ -9,7 +9,7 @@
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.up.yu18.mahjong.MainActivity"
+    tools:context="edu.up.yu18.mahjong.game.MahJong.game.MahJongHumanPlayer"
     android:weightSum="100"
     android:background="#1e771e"
     android:id="@+id/Main">
